--- a/vierkante_wielen/public/css/styles.css
+++ b/vierkante_wielen/public/css/styles.css
@@ -55,7 +55,7 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #777;
+    color: #FFB703
 }
 
 .menu-icon {
@@ -266,6 +266,11 @@ nav a:hover {
 .text {
     width: 500px;
 }
+
+
+/* Formulier */
+
+
 
 /* Footer */
 footer {
