--- a/vierkante-wielen/public/css/styles.css
+++ b/vierkante-wielen/public/css/styles.css
@@ -166,6 +166,7 @@ nav a:hover {
     font-weight: bold;
     font-size: 16px;
 }
+
 /* Mobile Optimization */
 @media screen and (max-width: 768px) {
     nav {
@@ -290,7 +291,7 @@ nav a:hover {
 
 /* Brick container and columns -tarieven*/
 
-h1{
+h1 {
     color: #003D86;
     display: flex;
     justify-content: center;
@@ -300,7 +301,8 @@ h1{
 
 .brick-container-tarieven {
     display: flex;
-    flex-wrap: wrap; /* Toegevoegd voor wrap bij kleinere schermen */
+    flex-wrap: wrap;
+    /* Toegevoegd voor wrap bij kleinere schermen */
     max-width: 1280px;
     margin: 0 auto;
     margin-top: 50px;
@@ -343,25 +345,26 @@ h1{
     list-style: none;
     margin-bottom: 50px;
     margin-right: 30px;
-  }
-  
-  .list-check li {
+}
+
+.list-check li {
     display: flex;
     justify-content: flex-start;
     text-align: start;
-  }
-  
-  .list-check li::before {
+}
+
+.list-check li::before {
     content: "☑️";
     display: inline-block;
     margin-right: 0.2em;
-  }
-  
-  
+}
+
+
 /* Media queries voor responsiveness */
 @media screen and (max-width: 768px) {
     .brick-tarieven {
-        flex-basis: calc(50% - 40px); /* Twee kolommen op schermen kleiner dan 768px */
+        flex-basis: calc(50% - 40px);
+        /* Twee kolommen op schermen kleiner dan 768px */
     }
 }
 
@@ -378,6 +381,7 @@ h1{
 .text-afbeelding img {
     margin-top: 36px;
     margin-bottom: 36px;
+    border-radius: 10px;
 }
 
 .square-image {
