--- a/vierkante-wielen/public/css/styles.css
+++ b/vierkante-wielen/public/css/styles.css
@@ -125,7 +125,7 @@ nav a:hover {
     background-color: #cc9400;
 }
 
-/* Buttons-Content */
+/* Buttons-Content-404 */
 
 .menu-buttons-404 {
     display: flex;
@@ -153,6 +153,7 @@ nav a:hover {
     background-color: #001f4d;
 }
 
+/* Buttons-Content-tarieven */
 .menu-buttons-tarieven {
     display: flex;
     justify-content: center;
@@ -168,6 +169,32 @@ nav a:hover {
     font-weight: bold;
     font-size: 16px;
 }
+/* Buttons-Content-footer */
+.yellow-button-footer {
+    background-color: #FFB703;
+    color: #31393C;
+}
+
+.yellow-button-footer:hover {
+    background-color: #cc9400;
+}
+
+.menu-buttons-footer {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
+
+.menu-buttons-footer button {
+    padding: 5px 15px;
+    /* margin-left: 10px; */
+    border: 5px solid transparent;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 16px;
+}
+
 
 /* Mobile Optimization */
 @media screen and (max-width: 768px) {
