--- a/vierkante-wielen/public/css/styles.css
+++ b/vierkante-wielen/public/css/styles.css
@@ -1,12 +1,16 @@
 /* Reset styles */
 body {
     margin: 0;
+    height: 100%;
     padding: 0;
     font-family: 'Quicksand', Arial, sans-serif;
     font-size: 18px;
     background-color: white;
     padding-top: 120px;
-    /* Adjust this value based on the height of your navbar */
+}
+
+html {
+    height: 100%;
 }
 
 .container {
@@ -138,7 +142,6 @@ nav a:hover {
 }
 
 /* Buttons-Content-404 */
-
 .menu-buttons-404 {
     display: flex;
     align-items: center;
@@ -265,15 +268,51 @@ nav a:hover {
     }
 }
 
-/* Banner image */
-.banner-afbeelding img {
-    width: 100%;
-    max-height: 350px;
-    object-fit: cover;
-    object-position: center;
-    margin: 0 auto;
-    display: block;
+/* The hero image */
+.hero-image {
+    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../images/vierkante-wielen-hero.jpg');
+
+    /* Set a specific height */
+    height: 50%;
+
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
+
+/* Place text in the middle of the image */
+.hero-text {
+    text-align: start;
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+
+/* Media query for mobile devices */
+@media only screen and (max-width: 768px) {
+    .hero-text {
+        text-align: center; /* Center text horizontally on mobile devices */
+        left: 0; /* Reset left position */
+        transform: translate(0, -50%); /* Adjust transform for centering */
+    }
+}
+
+/* Hero button */
+.menu-buttons-hero button {
+    padding: 5px 15px;
+    margin-top: 10px;
+    border: 5px solid transparent;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 16px;
+}
+
 
 /* Yellow bar */
 .yellow-bar {
