h1 tag issues opgelost
Sommige h1-tags op mobiel waren niet goed uitgelijnd. Dit is nu opgelost.

--- a/vierkante-wielen/public/css/styles.css
+++ b/vierkante-wielen/public/css/styles.css
@@ -629,6 +629,14 @@ button[type="submit"]:hover {
         margin-top: 18px;
         margin-bottom: 0px;
     }
+
+    .lespakketten h1 {
+        color: #003D86;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+    }
+
 }
 
 /* Algemene Voorwaarden */
