--- a/vierkante-wielen/resources/css/app.css
+++ b/vierkante-wielen/resources/css/app.css
@@ -1,3 +1,762 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* Reset styles */
+body {
+    margin: 0;
+    height: 100%;
+    padding: 0;
+    font-family: 'Quicksand', Arial, sans-serif;
+    font-size: 18px;
+    background-color: white;
+    padding-top: 120px;
+}
+
+html {
+    height: 100%;
+}
+
+.container {
+    background-color: #F2F2F2;
+    text-align: center;
+    color: #003D86;
+}
+
+header {
+    background-color: white;
+    color: #fff;
+    padding: 15px;
+    text-align: center;
+}
+
+/* Navbar */
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+    padding: 10px;
+    height: 100px;
+    max-width: 1280px;
+    margin: 0 auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+}
+
+/* Nav background */
+.container-nav {
+    display: flex;
+    align-items: center;
+    background-color: white;
+    padding: 10px;
+    height: 100px;
+    max-width: auto;
+    margin: 0 auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+}
+
+.nav-logo {
+    order: -1;
+}
+
+nav a {
+    color: #31393C;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 18px;
+    padding: 10px;
+    transition: background-color 0.3s ease;
+}
+
+nav a:hover {
+    color: #FFB703
+}
+
+.menu-icon {
+    display: none;
+    cursor: pointer;
+}
+
+.menu-items {
+    margin-left: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu-buttons {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
+
+.menu-buttons button {
+    padding: 5px 15px;
+    margin-left: 10px;
+    border: 5px solid transparent;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.menubar-mobiel {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.bar {
+    width: 35px;
+    height: 5px;
+    background-color: #003D86;
+    margin: 6px 0;
+}
+
+.material-icons {
+    position: absolute;
+    left: 20px;
+    top: 40px;
+}
+
+/* Buttons-NAV */
+
+.blue-button {
+    background-color: #003D86;
+    color: #fff;
+}
+
+.blue-button:hover {
+    background-color: #001f4d;
+}
+
+.yellow-button {
+    background-color: #FFB703;
+    color: #31393C;
+}
+
+.yellow-button:hover {
+    background-color: #cc9400;
+}
+
+/* Buttons-Content-404 */
+.menu-buttons-404 {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
+
+.menu-buttons-404 button {
+    padding: 5px 15px;
+    margin-top: 10px;
+    margin-right: 20px;
+    border: 5px solid transparent;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.blue-button-404 {
+    background-color: #003D86;
+    color: #fff;
+}
+
+.blue-button-404:hover {
+    background-color: #001f4d;
+}
+
+/* Buttons-Content-tarieven */
+.menu-buttons-tarieven {
+    display: flex;
+    justify-content: center;
+}
+
+.menu-buttons-tarieven button {
+    padding: 5px 15px;
+    margin-top: 10px;
+    margin-right: 20px;
+    border: 5px solid transparent;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+/* Mobile Optimization */
+@media screen and (max-width: 768px) {
+    nav {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .menu-buttons {
+        display: none;
+        margin-top: 10px;
+    }
+
+    .menu-icon {
+        display: block;
+        order: -1;
+    }
+
+    .menu-items {
+        display: none;
+        width: 100%;
+        margin-left: 0px;
+    }
+
+    .menu-items.show {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .brick-container,
+    .text-afbeelding {
+        flex-direction: column;
+    }
+
+    .brick {
+        margin-top: 20px;
+        margin-bottom: 20px;
+        text-align: center;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .brick-container-personeel,
+    .brick-container-autos,
+    .text-afbeelding {
+        flex-direction: column;
+    }
+
+    .brick-personeel {
+        margin-top: 20px;
+        margin-bottom: 20px;
+        text-align: center;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .brick-autos {
+        margin-top: 20px;
+        margin-bottom: 20px;
+        text-align: center;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .text-afbeelding .afbeelding {
+        width: 100%;
+        order: 1;
+        margin-bottom: 0px;
+        text-align: center;
+    }
+
+    .text-afbeelding .text {
+        width: 85%;
+        order: 2;
+        text-align: left;
+    }
+
+    .text-afbeelding img {
+        margin-top: 36px;
+        max-width: 100%;
+        height: auto;
+    }
+}
+
+/* The hero image */
+.hero-image {
+    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../images/vierkante-wielen-hero.jpg');
+
+    /* Set a specific height */
+    height: 50%;
+
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+/* Place text in the middle of the image */
+.hero-text {
+    text-align: start;
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+
+/* Media query for mobile devices */
+@media only screen and (max-width: 768px) {
+    .hero-text {
+        text-align: center; /* Center text horizontally on mobile devices */
+        left: 0; /* Reset left position */
+        transform: translate(0, -50%); /* Adjust transform for centering */
+    }
+}
+
+/* Hero button */
+.menu-buttons-hero button {
+    padding: 5px 15px;
+    margin-top: 10px;
+    border: 5px solid transparent;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+
+/* Yellow bar */
+.yellow-bar {
+    background-color: #FFB703;
+    color: #003D86;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.yellow-bar p {
+    margin: 0;
+    font-weight: bold;
+    font-size: 18px;
+    text-align: center;
+}
+
+/* Brick container and columns */
+.brick-container {
+    display: flex;
+    max-width: 1280px;
+    margin: 0 auto;
+    justify-content: space-between;
+}
+
+.brick {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    flex: 1;
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.brick img {
+    max-width: 100%;
+    height: auto;
+}
+
+.brick h2 {
+    margin-top: 10px;
+    font-size: 24px;
+    color: #003D86;
+}
+
+.brick p {
+    margin-top: 5px;
+    font-size: 18px;
+    color: #31393C;
+}
+
+/* Personeel */
+.container-personeel {
+    background-color: #F2F2F2;
+    text-align: center;
+    color: #003D86;
+    padding-top: 10px;
+}
+
+.brick-container-personeel {
+    display: flex;
+    max-width: 1280px;
+    margin: 0 auto;
+    justify-content: space-between;
+}
+
+.brick-personeel {
+    margin-top: 10px;
+    margin-bottom: 50px;
+    flex: 1;
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.brick-personeel img {
+    max-width: 100%;
+    height: auto;
+}
+
+.brick-personeel p {
+    margin-top: 5px;
+    font-size: 18px;
+    color: #31393C;
+}
+
+/* Auto's */
+.container-autos {
+    background-color: white;
+    text-align: center;
+    color: #003D86;
+    padding-top: 10px;
+}
+
+.brick-container-autos {
+    display: flex;
+    max-width: 1280px;
+    margin: 0 auto;
+    justify-content: space-between;
+}
+
+.brick-autos {
+    margin-top: 10px;
+    margin-bottom: 50px;
+    flex: 1;
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.brick-autos img {
+    max-width: 100%;
+    height: auto;
+}
+
+.brick-autos p {
+    margin-top: 5px;
+    font-size: 18px;
+    color: #31393C;
+}
+
+/* Contact Form */
+.contact-form {
+    width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    margin-top: 35px;
+    margin-bottom: 35px;
+    border-radius: 8px;
+    background-color: #F2F2F2;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+label {
+    font-weight: bold;
+    display: block;
+    margin-bottom: 5px;
+    color: #003D86;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+textarea {
+    resize: vertical;
+}
+
+button[type="submit"] {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 18px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button[type="submit"]:hover {
+    background-color: #0056b3;
+}
+
+/* Media query voor schermen kleiner dan 600px (mobiele apparaten) */
+@media (max-width: 600px) {
+    .contact-form {
+        width: 80%;
+    }
+}
+
+/* Brick container and columns lespakketten*/
+.lespakketten h1 {
+    color: #003D86;
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: -40px;
+}
+
+.brick-container-tarieven {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1280px;
+    margin: 0 auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    justify-content: space-between;
+}
+
+.brick-tarieven {
+    background-color: #F2F2F2;
+    height: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin: 20px;
+    flex: 1;
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 10px;
+}
+
+.brick-tarieven-img {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    max-width: 100%;
+    height: auto;
+}
+
+.brick-tarieven h2 {
+    margin-top: 10px;
+    font-size: 24px;
+    color: #003D86;
+}
+
+.brick-tarieven p {
+    margin-top: 5px;
+    font-size: 18px;
+    color: #31393C;
+}
+
+.list-check {
+    list-style: none;
+    margin-bottom: 50px;
+    margin-right: 30px;
+}
+
+.list-check li {
+    display: flex;
+    justify-content: flex-start;
+    text-align: start;
+}
+
+.list-check li::before {
+    content: "☑️";
+    display: inline-block;
+    margin-right: 0.2em;
+}
+
+/* Media queries for responsiveness */
+@media screen and (max-width: 768px) {
+    .brick-tarieven {
+        flex-basis: calc(50% - 40px);
+    }
+}
+
+/* Text + image */
+.text-afbeelding {
+    background-color: white;
+    margin: 0 auto;
+    max-width: 1280px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.text-afbeelding img {
+    margin-top: 36px;
+    margin-bottom: 36px;
+    border-radius: 10px;
+}
+
+.square-image {
+    max-width: 500px;
+    max-height: 500px;
+    width: auto;
+    height: auto;
+}
+
+.text h2 {
+    font-size: 24px;
+    color: #003D86;
+}
+
+.text {
+    width: 500px;
+}
+
+.text-afbeelding .text {
+    margin-left: 36px;
+    margin-bottom: 36px;
+}
+
+@media screen and (max-width: 768px) {
+    .text-afbeelding .text {
+        margin-left: 0px;
+    }
+}
+
+/* Algemene Voorwaarden */
+.algemene-voorwaarden {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.text-av {
+    max-width: 1280px;
+}
+
+.text-av h1 {
+    color: #003D86;
+    display: flex;
+    justify-content: start;
+    margin-top: 50px;
+    margin-bottom: -40px;
+}
+
+.text-av h2 {
+    font-size: 24px;
+    color: #003D86;
+}
+
+/* Footer */
+footer {
+    background-color: #003D86;
+    color: white;
+}
+
+.footer-container {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding-bottom: 20px;
+}
+
+.footer-brick-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-brick {
+    flex: 1;
+    margin-left: 36px;
+    margin-right: 18px;
+    text-align: left;
+}
+
+.middle-brick {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: left;
+    height: 100%;
+}
+
+.footer-brick h3 {
+    font-size: 23px;
+    margin-top: 36px;
+}
+
+.footer-brick p {
+    margin-top: 10px;
+    margin-bottom: 36px;
+}
+
+.footer-brick ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.footer-brick ul li {
+    margin-bottom: 5px;
+}
+
+.footer-brick a {
+    color: white;
+    text-decoration: none;
+}
+
+.footer-brick a:hover {
+    text-decoration: underline;
+}
+
+/* Buttons-Content-footer */
+.yellow-button-footer {
+    background-color: #FFB703;
+    color: #31393C;
+}
+
+.yellow-button-footer:hover {
+    background-color: #cc9400;
+}
+
+.menu-buttons-footer {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.menu-buttons-footer button {
+    padding: 5px 15px;
+    border: 5px solid transparent;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.menu-buttons-footer a {
+    text-decoration: none;
+}
+
+.yellow-button-footer {
+    background-color: #FFB703;
+    color: #31393C;
+}
+
+.yellow-button-footer:hover {
+    background-color: #cc9400;
+}
+
+
+/* Media query for smaller screens */
+@media (max-width: 768px) {
+    .footer-brick-container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .footer-brick {
+        flex: none;
+        margin-left: 0;
+        padding-left: 20px;
+        text-align: left;
+    }
+}
