css file gewijzigd + pakketten toegevoegd in dashboard

--- a/vierkante-wielen/resources/css/app.css
+++ b/vierkante-wielen/resources/css/app.css
@@ -507,6 +507,7 @@ button[type="submit"]:hover {
     justify-content: center;
     margin-top: 50px;
     margin-bottom: -40px;
+    font-size: 40px;
 }
 
 .brick-container-tarieven {
