--- a/vierkante-wielen/resources/css/app.css
+++ b/vierkante-wielen/resources/css/app.css
@@ -480,17 +480,18 @@ textarea {
 }
 
 button[type="submit"] {
-    background-color: #007bff;
+    background-color: #003D86;
     color: #fff;
-    border: none;
-    padding: 10px 20px;
-    font-size: 18px;
+    padding: 5px 15px;
+    border: 5px solid transparent;
     border-radius: 5px;
     cursor: pointer;
+    font-weight: bold;
+    font-size: 16px;
 }
 
 button[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: #001f4d;
 }
 
 /* Media query voor schermen kleiner dan 600px (mobiele apparaten) */
