--- a/vierkante-wielen/resources/css/app.css
+++ b/vierkante-wielen/resources/css/app.css
@@ -268,6 +268,19 @@ button[type="submit"]:hover {
     background-color: #001f4d;
 }
 
+/* Profile */
+.background-grey {
+    background-color: #f2f2f2;
+}
+
+.info h2 {
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-size: 24px;
+    color: #003D86;
+    font-weight: bold;
+}
+
 /* Media Queries */
 @media screen and (min-width: 768px) {
     .table-grey,
