--- a/vierkante-wielen/resources/css/app.css
+++ b/vierkante-wielen/resources/css/app.css
@@ -292,3 +292,31 @@ button[type="submit"]:hover {
         width: 48%;
     }
 }
+
+
+/* agenda */
+
+/* agenda */
+
+.fc-event {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+}
+.fc-day-header {
+background-color: #003D86;
+color: white;
+}
+
+.fc-axis{
+background-color: #003D86;
+color: white;
+}
+
+.fc-next-button {
+background-color: white;
+}
+
+.min-h-screen {
+min-height: 10vh;
+}
