--- a/vierkante-wielen/resources/css/app.css
+++ b/vierkante-wielen/resources/css/app.css
@@ -178,6 +178,10 @@ button[type="submit"]:hover {
     background-color: #001f4d;
 }
 
+.b-form {
+    margin-top: 10px;
+}
+
 /* Yellow bar */
 .yellow-bar {
     background-color: #FFB703;
