--- a/vierkante-wielen/resources/css/app.css
+++ b/vierkante-wielen/resources/css/app.css
@@ -339,6 +339,97 @@ button[type="submit"]:hover {
     background-color: #0056b3;
 }
 
+/* popup agenda */
+
+       .opmerking {
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+        }
+
+        .modal-content {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            pointer-events: auto;
+            background-color: #fff;
+            background-clip: padding-box;
+            border: 7px solid #FFB703;
+            border-radius: .3rem;
+            outline: 0;
+        }
+
+        .btn-secondary {
+            color: #fff;
+            border-color: #6c757d;
+            background-color: #003D86;
+            padding: 5px 15px;
+            margin-left: 10px;
+            border: 5px solid transparent;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+            font-size: 16px;
+
+        }
+
+        .btn-primary {
+            color: #fff;
+            background-color: #FFB703;
+            border-color: #6c757d;
+            padding: 5px 15px;
+            margin-left: 10px;
+            border: 5px solid transparent;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+            font-size: 16px;
+
+        }
+
+        .btn-secondary,
+.btn-primary {
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Toevoegen van een schaduw */
+    transition: box-shadow 0.3s ease; /* Vloeiende overgang voor schaduw bij hover */
+    
+
+}
+
+.btn-secondary:hover,
+.btn-primary:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Intensifiëren van de schaduw bij hover */
+    background-color: #6c757d;
+}
+
+.time-event label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+.time-event input[type="time"] {
+    padding: 5px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.time-event input[type="time"]:focus {
+    outline: none;
+    border-color: #FFB703; /* Kleur van de focusrand aanpassen */
+    box-shadow: 0 0 5px rgba(0, 61, 134, 0.5); /* Toevoegen van een schaduw bij focus */
+}
+
+h3{
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-size: 18px;
+    color: #003D86;
+    font-weight: bold;
+
+}
+
 /* Text */
 .text {
     width: 100%;
